--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation("com.google.guava:guava:28.1-android")
+    implementation 'com.google.android.material:material:1.0.0'
 
 }
