--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.ProductPropertyActivity"></activity>
+        <activity android:name=".Activities.CategoryActivity"></activity>
+        <activity android:name=".Activities.AddCategoryActivity" />
+        <activity android:name=".Activities.ProductActivity" />
+        <activity android:name=".Activities.CategoryPropertyActivity" />
         <activity android:name=".Activities.BaseActivity" />
         <activity android:name=".Activities.AddProductActivity" />
-        <activity android:name=".Activities.AddProductPropertyActivity" />
+        <activity android:name=".Activities.AddCategoryPropertyActivity" />
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
